# llm-behavioral-eval

./: .cz.toml  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.es.md  README.md  pyproject.toml
.github/workflows/: ci.yml  commitlint.yml  publish.yml  release.yml
src/behavioral_eval/: __init__.py  __main__.py  cli.py  config.py  engine.py  judge.py  reports.py  scoring.py  stats.py  types.py
src/behavioral_eval/suites/: __init__.py  concrete.py  core_principles.py  roles.py  rubric.py  security.py  session_continuity.py  variants.py
tests/: test_engine.py
