[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-behavioral-eval"
version = "1.0.1"
description = "Evaluate LLMs against behavioral specifications (AGENTS.md, Claude.md, custom rules)"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.10",
    "commitizen>=3.0",
]

[project.scripts]
behavioral-eval = "behavioral_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/behavioral_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true

[tool.commitizen.customize]
change_type_order = [
    "BREAKING CHANGE",
    "feat",
    "fix",
    "refactor",
    "perf",
    "docs",
    "test",
    "ci",
    "chore",
]
